[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Kenney Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.0
margin_top = -50.0
margin_right = 210.0
margin_bottom = 50.0
rect_min_size = Vector2( 420, 100 )
custom_fonts/font = SubResource( 1 )
text = "Coin Dash !"

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 80.0
margin_top = 43.0
margin_right = 180.0
margin_bottom = 123.0
rect_min_size = Vector2( 100, 80 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1

[node name="TimeLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -183.0
margin_top = 43.0
margin_right = -83.0
margin_bottom = 123.0
rect_min_size = Vector2( 100, 80 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = 120.0
margin_right = 150.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 80 )
custom_fonts/font = SubResource( 4 )
text = "Start"
flat = true
